--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,3 +176,36 @@ input {
 .modal label {
     font-size: 13px;
 }
+
+/* Auth */
+
+.auth-container{
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+
+.auth-container-box{
+   width: 500px;
+   border-radius: 10px;
+   overflow: hidden;
+   box-shadow: rgba(0, 0, 0, 0.5) 0 6px 24px rgba(0, 0, 0, 0.8) 0 0 0 1px;
+}
+
+.auth-container-box form{
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    padding: 20px;
+}
+
+.auth-options{
+    display: flex;
+}
+
+.auth-options button{
+    width: 50%;
+    border: none;
+    padding: 10px;
+    color: rgb(35, 38, 47);
+}
