--- a/client/src/index.css
+++ b/client/src/index.css
@@ -209,3 +209,26 @@ input {
     padding: 10px;
     color: rgb(35, 38, 47);
 }
+
+.user-email{
+    float: right;
+    font-size: 13px;
+    margin: 10px;
+    color: rgb(114, 114, 114);
+}
+
+.outer-bar{
+    width: 200px;
+    height: 14px;
+    background-color: rgb(216, 216, 216);
+    border-radius: 7px;
+    overflow: hidden;
+}
+
+.inner-bar{
+    height: 14px;
+}
+
+.task-title{
+    width: 300px;
+}
